# report_builder

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260716_0001_initial.py
frontend/: .npmrc  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: register_identity.sh
src/report_builder/: __init__.py  api.py  auth.py  config.py  crypto.py  db.py  execution.py  main.py  models.py  schemas.py  sql_security.py
tests/: test_api_permissions.py  test_auth.py  test_config.py  test_execution.py  test_sql_security.py
