[project]
name = "turkuaz-report-builder"
version = "0.1.0"
description = "Safe parameterized report builder for TURKUAZ services."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.6.1",
    "psycopg[binary]>=3.2.3",
    "pyodbc>=5.2.0",
    "pyjwt>=2.9.0",
    "sqlalchemy>=2.0.36",
    "sqlglot>=26.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[project.scripts]
report-builder = "report_builder.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
